<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaperblur"
    tools:context=".WelcomeActivity">

    <Button
        android:id="@+id/welcomeButtonSignUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="572dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/sign_up"
        android:textColorLink="#000000"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#FFFFFF"
        app:strokeWidth="2dp"
        tools:ignore="VisualLintButtonSize" />

    <Button
        android:id="@+id/welcomeButtonLogIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#FFFFFF"
        android:text="LOG IN"
        android:textColor="#000000"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcomeButtonSignUp"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <TextView
        android:id="@+id/welcomeTextDescription"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="serif"
        android:text="@string/conhe_a_obras_revisite_momentos"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <ImageView
        android:id="@+id/welcomeImageIconLong"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="404dp"
        android:src="@drawable/skoob_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />
</androidx.constraintlayout.widget.ConstraintLayout>