<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF"
    android:backgroundTint="#00FFFFFF"
    android:fillViewport="true"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="245dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000000"
        tools:context=".profileActivity">

        <ImageView
            android:id="@+id/profileImageBackground"
            android:layout_width="411dp"
            android:layout_height="167dp"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/profile_wallpaper" />

        <ImageView
            android:id="@+id/profileImageLine"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profileline" />

        <ImageView
            android:id="@+id/profileImageUserIcon"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/round_outline"
            android:clipToOutline="true"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/profile_icon" />

        <TextView
            android:id="@+id/profileTextUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarala"
            android:text="@string/user_name"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/profileImageUserIcon"
            app:layout_constraintHorizontal_bias="0.335"
            app:layout_constraintStart_toStartOf="@+id/profileImageUserIcon"
            app:layout_constraintTop_toBottomOf="@+id/profileImageUserIcon" />

        <TextView
            android:id="@+id/profileTextUserBio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sarala"
            android:text="@string/phrase"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/profileTextUsername"
            app:layout_constraintStart_toStartOf="@+id/profileTextUsername"
            app:layout_constraintTop_toBottomOf="@+id/profileTextUsername" />

        <TextView
            android:id="@+id/profileTextFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="296dp"
            android:fontFamily="@font/sarala"
            android:text="@string/favoritos"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.449"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/profileButtonFavoriteBook1"
            android:layout_width="103dp"
            android:layout_height="159dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:background="#00352222"
            android:importantForAccessibility="no"
            android:scaleType="centerInside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profileTextFavorites"
            tools:srcCompat="@drawable/harry_cover" />

        <ImageButton
            android:id="@+id/profileButtonFavoriteBook2"
            android:layout_width="103dp"
            android:layout_height="159dp"
            android:layout_marginStart="28dp"
            android:background="#00FFFFFF"
            android:importantForAccessibility="no"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/profileButtonFavoriteBook1"
            app:layout_constraintStart_toEndOf="@+id/profileButtonFavoriteBook1"
            app:layout_constraintTop_toTopOf="@+id/profileButtonFavoriteBook1"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@drawable/it_cover" />

        <ImageButton
            android:id="@+id/profileButtonFavoriteBook3"
            android:layout_width="103dp"
            android:layout_height="159dp"
            android:layout_marginStart="28dp"
            android:layout_marginEnd="20dp"
            android:background="#00FFFFFF"
            android:importantForAccessibility="no"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="@+id/profileButtonFavoriteBook2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profileButtonFavoriteBook2"
            app:layout_constraintTop_toTopOf="@+id/profileButtonFavoriteBook2"
            app:layout_constraintVertical_bias="0.0"
            tools:srcCompat="@drawable/alienista_cover" />

        <TextView
            android:id="@+id/profileTextLastReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="544dp"
            android:fontFamily="@font/sarala"
            android:text="@string/ltimas_reviews"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/profileImageSquare"
            android:layout_width="388dp"
            android:layout_height="213dp"
            android:layout_marginTop="580dp"
            android:backgroundTint="#575757"
            android:fallbackLineSpacing="false"
            android:handwritingBoundsOffsetRight="12dp"
            android:text="@string/anything"
            android:textColor="#003C3A3A"
            app:cornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.478"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="VisualLintButtonSize" />

        <ImageButton
            android:id="@+id/profileButtonIcon"
            android:layout_width="61dp"
            android:layout_height="51dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00FFFFFF"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="@+id/profileImageSquare"
            app:layout_constraintHorizontal_bias="0.434"
            app:layout_constraintStart_toStartOf="@+id/profileImageSquare"
            app:layout_constraintTop_toTopOf="@+id/profileImageSquare"
            tools:srcCompat="@drawable/profile_icon" />

        <ImageView
            android:id="@+id/profileImageStar_1"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginTop="55dp"
            android:importantForAccessibility="no"
            app:layout_constraintEnd_toEndOf="@+id/profileImageSquare"
            app:layout_constraintHorizontal_bias="0.556"
            app:layout_constraintStart_toStartOf="@+id/profileImageSquare"
            app:layout_constraintTop_toTopOf="@+id/profileImageSquare"
            app:tint="#FAA72C"
            tools:srcCompat="@drawable/estrela" />

        <ImageView
            android:id="@+id/profileImageStar_2"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/profileImageStar_1"
            app:layout_constraintStart_toEndOf="@+id/profileImageStar_1"
            app:layout_constraintTop_toTopOf="@+id/profileImageStar_1"
            app:layout_constraintVertical_bias="0.0"
            app:tint="#FAA72C"
            tools:srcCompat="@drawable/estrela" />

        <ImageView
            android:id="@+id/profileImageStar_3"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/profileImageStar_2"
            app:layout_constraintStart_toEndOf="@+id/profileImageStar_2"
            app:layout_constraintTop_toTopOf="@+id/profileImageStar_2"
            app:layout_constraintVertical_bias="0.0"
            app:tint="#FAA72C"
            tools:srcCompat="@drawable/estrela" />

        <ImageView
            android:id="@+id/profileImageStar_4"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:importantForAccessibility="no"
            android:tint="#FAA72C"
            app:layout_constraintBottom_toBottomOf="@+id/profileImageStar_3"
            app:layout_constraintStart_toEndOf="@+id/profileImageStar_3"
            app:layout_constraintTop_toTopOf="@+id/profileImageStar_3"
            tools:ignore="UseAppTint"
            tools:srcCompat="@drawable/estrela" />

        <ImageView
            android:id="@+id/profileImageStar_5"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_marginStart="4dp"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/profileImageStar_4"
            app:layout_constraintStart_toEndOf="@+id/profileImageStar_4"
            app:layout_constraintTop_toTopOf="@+id/profileImageStar_4"
            app:tint="#FAA72C"
            tools:srcCompat="@drawable/estrela" />

        <TextView
            android:id="@+id/profileTextReview"
            android:layout_width="215dp"
            android:layout_height="112dp"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat"
            android:textColor="#D3D3D3"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/profileImageSquare"
            app:layout_constraintEnd_toEndOf="@+id/profileImageSquare"
            app:layout_constraintHorizontal_bias="0.861"
            app:layout_constraintStart_toStartOf="@+id/profileImageSquare"
            app:layout_constraintTop_toTopOf="@+id/profileImageSquare"
            app:layout_constraintVertical_bias="0.801"
            tools:ignore="TextSizeCheck" />

        <Button
            android:id="@+id/profileButtonUsernameReview"
            android:layout_width="145dp"
            android:layout_height="38dp"
            android:layout_marginTop="24dp"
            android:backgroundTint="#00FFFFFF"
            android:text="@string/username_example"
            android:textAlignment="textStart"
            android:textColor="#FFFFFF"
            android:textColorLink="#EDEDED"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/profileImageSquare"
            app:layout_constraintHorizontal_bias="0.837"
            app:layout_constraintStart_toStartOf="@+id/profileImageSquare"
            app:layout_constraintTop_toTopOf="@+id/profileImageSquare"
            tools:ignore="TextSizeCheck" />

        <ImageButton
            android:id="@+id/profileButtonReviewBook"
            android:layout_width="119dp"
            android:layout_height="174dp"
            android:background="#00FFFFFF"
            android:importantForAccessibility="no"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="@+id/profileImageSquare"
            app:layout_constraintEnd_toEndOf="@+id/profileImageSquare"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintStart_toStartOf="@+id/profileImageSquare"
            app:layout_constraintTop_toTopOf="@+id/profileImageSquare"
            app:layout_constraintVertical_bias="0.487"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/bookcover1" />

        <ImageButton
            android:id="@+id/profileButtonReturn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:background="#00FFFFFF"
            android:scaleType="centerInside"
            android:tint="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profileImageBackground"
            app:srcCompat="@drawable/arrow_left" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


